--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ ignore =
 per-file-ignores =
 	# it is possibble to have prints in scripts
 	hexlet_python_package/scripts/*.py: WPS421
-	brain_games/scripts/*.py: WPS421, E265, S311, WPS305, E501
+	brain_games/scripts/*.py: WPS421, E265, S311, WPS305, E501, I001, I005
 	brain_games/*.py: WPS421, WPS305
 	brain_games/__init__.py: D104
 	brain_games/scripts/__init__.py: D104
