--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,9 @@ ignore =
 per-file-ignores =
 	# it is possibble to have prints in scripts
 	hexlet_python_package/scripts/*.py: WPS421
-	brain_games/scripts/*.py: WPS432, WPS305, WPS421, E265, S311, WPS305, E501, I005, I001
-	brain_games/games/*.py: WPS432, WPS305, WPS421, E265, S311, WPS305, E501, I005, I001, D103, D104, E262, WPS462, WPS428, WPS322, WPS210
-	brain_games/*.py: WPS421, WPS305
+	brain_games/scripts/*.py: WPS421
+	brain_games/games/*.py: WPS421
+	brain_games/*.py: WPS421
 	brain_games/__init__.py: D104
 	brain_games/scripts/__init__.py: D104
 
