--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,10 @@ ignore =
 per-file-ignores =
 	# it is possibble to have prints in scripts
 	hexlet_python_package/scripts/*.py: WPS421
-	brain_games/scripts/*.py: WPS421
-	brain_games/games/*.py: WPS421
-	brain_games/*.py: WPS421
+	brain_games/scripts/*.py: WPS421, S311
+	brain_games/games/*.py: WPS421, S311, WPS210
+	brain_games/*.py: WPS421, S311
+	brain_games/games/__init__.py: D104
 	brain_games/__init__.py: D104
 	brain_games/scripts/__init__.py: D104
 
